# epoch

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  event-sourcing-diagram.md
.github/workflows/: check.yml
docs/: 2602121055_spec_event_correlation_and_causation.md  architectural_points.md  guide.md  schema-evolution.md
docs/2602121055_event_correlation_and_causatio/: phase1_implementation.md
epoch/: Cargo.toml
epoch/examples/: event-correlation-causation.rs  hello-world.rs  saga-order-fulfillment.rs  schema-evolution.rs  transactional-workflow.rs  versioned-snapshots.rs
epoch/src/: lib.rs
epoch_core/: Cargo.toml  README.md
epoch_core/src/: aggregate.rs  causation.rs  event.rs  event_applicator.rs  event_store.rs  lib.rs  projection.rs  saga.rs  snapshot.rs  state_store.rs  subscriber_id.rs  testing.rs  upcasting.rs
epoch_core/tests/: aggregate_rehydration_tests.rs  command_causation_tests.rs  compile_fail_tests.rs  projection_rehydration_tests.rs  read_last_event_default_impl_tests.rs  slice_ref_event_stream_tests.rs  snapshotting_aggregate_tests.rs  store_events_atomicity_contract_test.rs  subset_event_conversion_tests.rs
epoch_core/tests/compile_fail/: aggregate_as_projection.rs  aggregate_as_projection.stderr
epoch_derive/: Cargo.toml
epoch_derive/examples/: event_data.rs  subset.rs  subset_of.rs
epoch_derive/src/: event_data.rs  lib.rs  projection.rs  subset.rs  subset_of.rs
epoch_derive/src/subset/: mod.rs
epoch_derive/tests/: compile_pass.rs  event_data_schema_version_tests.rs  subscriber_id_tests.rs  subset_of_tests.rs  zz_malformed_event_data_attributes.rs
epoch_derive/tests/compile-fail/event_data/: malformed_int_literal.rs  schema_version_int_vs_string.rs  shema_version_is_string.rs
epoch_derive/tests/compile-fail/subset_of/: bad_field_name.rs  bad_field_name.stderr  bad_variant_name.rs  bad_variant_name.stderr  malformed_subset_of_attr.rs  malformed_subset_of_attr.stderr  missing_subset_of_attr.rs  missing_subset_of_attr.stderr  non_enum_struct.rs  non_enum_struct.stderr  non_enum_union.rs  non_enum_union.stderr
epoch_derives/: Cargo.toml
epoch_derives/src/: lib.rs
epoch_derives/src/subset/: mod.rs
epoch_mem/: Cargo.toml  README.md
epoch_mem/src/: aggregate.rs  event_store.rs  lib.rs  projection_store.rs  snapshot.rs
epoch_mem/tests/: store_events_atomicity_tests.rs  upcasting_tests.rs
epoch_mem_store/: Cargo.toml
epoch_mem_store/src/: lib.rs
epoch_pg/: .env.example  Cargo.toml  README.md  docker-compose.yml
epoch_pg/src/: aggregate.rs  event_bus.rs  event_store.rs  lib.rs  snapshot_store.rs  state_store.rs
epoch_pg/src/event_bus/: checkpoint.rs  config.rs  mod.rs  retry.rs  subscriber_state.rs
epoch_pg/src/migrations/: m001_create_events_table.rs  m002_add_global_sequence.rs  m003_create_event_bus_infrastructure.rs  m004_rename_tables_with_epoch_prefix.rs  m005_add_checkpoint_sequence_index.rs  m006_add_dlq_resolution_columns.rs  m007_add_causation_columns.rs  m008_add_bus_name_to_checkpoints.rs  m009_create_gap_timeout_log.rs  m010_strip_data_from_notify_payload.rs  m011_add_txid_to_events.rs  m012_add_schema_version_to_events.rs  m013_create_snapshots_table.rs  mod.rs
epoch_pg/tests/: inline_dispatch_integration_tests.rs  migrations_integration_tests.rs  pgeventbus_integration_tests.rs  pgeventstore_integration_tests.rs  pgsnapshotstore_integration_tests.rs  pgstatestorage_integration_tests.rs  saga_adapter_integration_tests.rs  store_events_atomicity_integration_tests.rs  transaction_integration_tests.rs  upcasting_integration_tests.rs
epoch_pg/tests/common/: mod.rs
epoch_sqlx/: Cargo.toml
examples/: hello-world.rs
specs/: 0001-reduce-event-cloning.md  0002-aggregate-self-subscription-anti-pattern.md  0002-pg-event-bus-reliability-impl-plan.md  0002-pg-event-bus-reliability.md  0003-dlq-branch-review-fixes.md  0003-pg-migrations.md  0003-projection-optimistic-concurrency.md  0004-instance-mode-coordinated.md  0005-checkpoint-mode-batched.md  0006-state-write-mode-deferred.md  0007-transaction-support.md  0008-aggregate-self-subscription-anti-pattern.md  0009-saga-example-implementation-plan.md  0009-saga-example.md  0010-async-event-observer-dispatch.md  0011-inmemory-eventbus-async-dispatch-plan.md  0011-inmemory-eventbus-async-dispatch.md  0012-out-of-order-notify-checkpoint-skip-bug.md  0013-event-metadata-query-helpers.md  0014-read-last-event-and-causation-builder.md  0015-cloud168-delivery-plan.md  0015-cloud168-read-last-event-causation-builder.md  0015-consumer-side-subset-derive.md  0016-cloud169-delivery-plan.md  0016-gap-timeout-observability.md  0017-cloud170-remove-panicking-unwraps.md  0018-cloud155-strip-data-from-notify-payload.md  0019-cloud180-snapshot-fencing.md  0019-fix-m011-migration-table-rename.md  0020-cloud171-discovery.md  0020-cloud171-store-events-atomicity.md  0021-cloud173-event-schema-evolution-upcasting.md  0022-cloud183-read-events-range.md  0023-cloud184-versioned-snapshot-store.md  2602121055_spec_event_correlation_and_causation.md
src/: event.rs  lib.rs
