
[workspace]
resolver = "3"
members = [
    "epoch",
    "epoch_core",
    "epoch_derive",
    "epoch_mem"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ruben Paz <me@ruben.io>"]
keywords = ["event-sourcing", "event", "sourcing"]
license = "LGPL-3.0-or-later"
# https://crates.io/category_slugs
categories = [ "data-structures", "web-programming" ]
