[package]
name = "epoch"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true


[dependencies]
epoch_core = { path = "../epoch_core/", version = "0.1.0" }
epoch_derive = { path = "../epoch_derive", optional = true, version = "0.1.0" }
epoch_mem_store = { path = "../epoch_mem_store", optional = true, version = "0.1.0" }

[dev-dependencies]
async-trait = "0.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures-core = "0.3.31"
serde = { version = "1.0.219", features=["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
epoch_mem_store = { path = "../epoch_mem_store", version = "0.1.0" }

[features]
default = ["derive"]
derive = ["epoch_derive"]
mem_store = ["epoch_mem_store"]

[[examples]]
name = "hello-world"
path = "core/examples/hello-world.rs"
