[package]
name = "epoch"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true


[dependencies]
epoch_core = { path = "../epoch_core/", version = "0.2.0" }
epoch_derive = { path = "../epoch_derive", optional = true, version = "0.2.0" }
epoch_mem = { path = "../epoch_mem", optional = true, version = "0.2.0" }
epoch_pg = { path = "../epoch_pg", optional =true, version = "0.2.0" }

[dev-dependencies]
async-trait = "0.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures-core = "0.3.31"
serde = { version = "1.0.219", features=["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
epoch_mem = { path = "../epoch_mem", version = "0.2.0" }
log = "0.4"
env_logger = "0.11.8"

[features]
default = ["derive"]
derive = ["epoch_derive"]
in-memory = ["epoch_mem"]
postgres = ["epoch_pg"]

[[example]]
name = "hello-world"
path = "examples/hello-world.rs"
