[package]
name = "epoch_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true


[dependencies]
log = "0.4"
async-trait = "0.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures-core = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[features]
# Test-only utilities (contract tests) for verifying backend implementations.
testing = []
# Event schema evolution / upcasting mechanism. Pulls in an optional `serde_json`
# dependency used as the intermediate representation an upcaster step mutates.
# Off by default: when disabled, `epoch_core`'s dependency set and public API are
# unchanged (zero-cost when unused).
upcasting = ["dep:serde_json"]

[dev-dependencies]
epoch_core = { path = ".", features = ["testing", "upcasting"] }
epoch_mem = { path = "../epoch_mem" }
epoch_derive = { path = "../epoch_derive" }
trybuild = "1.0"
