[package]
name = "epoch_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
epoch_core = { path = "../epoch_core" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"


[lib]
proc-macro = true

[dev-dependencies]
prettyplease = "0.2.35"
syn = { version = "2.0", features = ["full"] }
