[package]
name = "epoch_mem"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true


[dependencies]
epoch_core = { path = "../epoch_core" }
async-trait = "0.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures-core = "0.3.31"
serde = { version = "1.0.219", features=["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["serde", "v4"] }


