[package]
name = "epoch_pg"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
async-stream = "0.3.5"
chrono = "0.4.41"
epoch_core = { path = "../epoch_core" }
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "derive", "chrono"] }
thiserror = "2.0.12"
uuid = "1.17.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
epoch_derive = { path = "../epoch_derive" }
epoch_mem = { path = "../epoch_mem" }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "derive", "chrono", "runtime-tokio"] }
env_logger = "0.11.3"
serial_test = "3"
